# xparad

./: Cargo.toml  README.md
server/: Cargo.toml
server/src/: config.rs  constants.rs  functions.rs  main.rs  network.rs
wallet/: Cargo.toml
wallet/src/: main.rs
