[package]
name = "xparad"
version = "1.4.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
strip = true

[build-dependencies]
cmake = "0.1"

[dependencies]
colored = "2.1"
figlet-rs = "0.1"
num-traits = "0.2.19"
monero = { version = "0.21", features = ["serde", "experimental"] }
once_cell = "1.18"
sled = "0.34.7"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0"
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
k256 = "0.9"
warp = { version = "0.3", features = ["compression"] }
futures = "0.3"
chrono = "0.4.39"
sha3 = "0.10"
anyhow = "1.0.96"
nng = "1.0"
reqwest = { version = "0.12", features = ["gzip", "brotli", "deflate", "blocking", "json"] }
randomx-rs = "1.4.0"
dashmap = "5.5"
uuid = { version = "1", features = ["v4"] }
blake3 = "1.5.0"
pqcrypto-sphincsplus = "0.7.1"
pqcrypto-traits = "0.3.5"
num-bigint = "0.4.6"
rand = "0.8"
regex = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
